apps/owasp-juice-shop/install/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: owasp-juice-shop
spec:
  parentRefs:
    - name: north-south
      namespace: gateway
      sectionName: http
  hostnames:
    - juice.minikube
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https
  namespace: owasp-juice-shop
spec:
  parentRefs:
    - name: north-south
      namespace: gateway
      sectionName: https
  hostnames:
    - juice.minikube
  rules:
    - backendRefs:
        - name: juice-shop
          port: 3000
